@@ -1,2 +1,5 @@
+__all__ = ['GetNews', 'obot', 'sendMail']
+from PrawNewsBot.NewsBot import GetNews
+from PrawNewsBot.NewsBot import obot
 # for the initialization
 # try to find a way to better initialize it
